<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/spotifyl" />
        <View
            android:layout_width="match_parent"
            android:layout_height="90dp"/>

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/username"
            android:inputType="text" />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="333dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="308dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#22D762"
            android:text="@string/login"
            android:textColorLink="#20D761" />
        <View
            android:layout_width="match_parent"
            android:layout_height="130dp"/>
        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Don't have an account? \n Press sign up to create a new account"
            android:textAlignment="center" />
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <Button
            android:id="@+id/signupButton"
            android:layout_width="234dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#20D761"
            android:text="@string/singup" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>